# Cubefile

./: README.md  pyproject.toml
Cubefile/: Cubefile.py  __init__.py
docs/source/: conf.py  index.rst
