[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Cubefile"
description = "Read cubefiles."
version = "0.9.0"
readme = "README.md"
requires-python = ">=3.4"
license = {file = "LICENSE"}
authors = [
    {name = "Alistair Boyer", email = "Cubefile@boyer-research.com"},
]
keywords = ["cube", "numpy", "voxel", "quantum mechacnics", "gaussian", "electron density", "computational chemistry"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: File Formats",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "numpy >= 1.4",
  'pathlib; python_version < "3.4"',
]

[tool.setuptools.packages.find]
namespaces = false

[options.packages.find]
where = ["Cubefile"]
include = ["Cubefile*"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "Cubefile.__version__"}